--- a/jetsencloud/src/main/res/values/strings.xml
+++ b/jetsencloud/src/main/res/values/strings.xml
@@ -10,9 +10,11 @@
     <string name="sendexercise_title">发送习题</string>
     <string name="sendexercise">发送</string>
     <string name="common_data">习题库</string>
+    <string name="question_list_detail">习题详情</string>
     <!-- 下载-->
     <string name="no_sdcard">设备没有SDcard！</string>
     <string name="download_error">文件下载失败！</string>
+    <string name="not_download_file">文件未下载，请先下载文件！</string>
     <string name="download_success">下载完成！</string>
     <string name="no_permission">未授予相关权限！</string>
     <string name="question_period">课时</string>
