--- a/jetsencloud/src/main/res/values/strings.xml
+++ b/jetsencloud/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="prepare_resource">备课资源</string>
 
     <string name="http_exception">网络请求失败</string>
-
+    <string name="no_network">无网络，请连接网络后重试！</string>
     <string name="common_overview">备课课件</string>
     <string name="sendexercise_title">发送习题</string>
     <string name="sendexercise">发送</string>
@@ -13,7 +13,7 @@
     <string name="question_list_detail">习题详情</string>
     <!-- 下载-->
     <string name="no_sdcard">设备没有SDcard！</string>
-    <string name="download_error">文件下载失败！</string>
+    <string name="download_error">有一个文件下载失败！</string>
     <string name="not_download_file">文件未下载，请先下载文件！</string>
     <string name="download_success">下载完成！</string>
     <string name="no_permission">未授予相关权限！</string>
@@ -21,5 +21,8 @@
     <string name="no_question_list">没有选择题目</string>
     <string name="no_question_file">题目不存在或者下载失败！</string>
     <string name="json_err">题目解析失败！</string>
-    <string name="no_resources_and_questions">没有要下载的资源或者测验题目！</string>
+    <string name="no_books">未加载到课标数据，\n请确保网络正常后返回重新加载！</string>
+    <string name="no_resources">没有查到课件数据，请选择左侧已经背过课程课件的课标树对应的章节！</string>
+    <string name="no_questions">没有查到习题数据，请选择左侧已经背过课程习题的课标树对应的章节！</string>
+    <string name="progress_msg">数据玩命加载中...</string>
 </resources>
